# OceanSimulator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/: labeler.yml
.github/workflows/: Linux-Build.yml  MacOS-Build-Optimized  MacOS-Build-Optimized.yml  Windows-Builds-Optimized.yml  cmake-multi-platform.yml  label.yml  labeler.yml
blogs/: # Vulkan Implementation CheckList.md  Day 01.md  Day 02.md  Day 03.md  Day 04.md  Debugging and Logging.md  Job System Details.md  Long-term Goals.md  Software Architecture.md  VkFFT Details and How it Fits in the Project.md  Vulkan Memory Allocator (VMA) Implementation details.md  debug_utils info.md
src/: config.h  device.cpp  device.h  engine.cpp  engine.h  instance.cpp  instance.h  logger.cpp  logger.h  main.cpp
src/Application/: AppConfig.h  CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt
src/Core/Config/: AppConfig.h  PhyDeviceFeaturesConfig.h
src/Core/Logging/: Logger.cpp  Logger.h
src/Core/Vulkan/: Instance.cpp  Instance.h  LDevice.cpp  LDevice.h  PhyDevice.cpp  PhysicalDeviceSupport.h  Surface.cpp  Surface.h  VulkanContext.h  VulkanInit.cpp  VulkanInit.h  config.h
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Renderer/Vulkan/: CommandBuffers.cpp  CommandBuffers.h  Swapchain.cpp  Swapchain.h
